[package]
name = "clfft"
version = "0.3.0"
authors = ["Christian Liebhardt"]
build = "build.rs"
license = "Apache-2.0"
homepage = "https://github.com/liebharc/clfft"
repository = "https://github.com/liebharc/clfft"
documentation = "https://liebharc.github.io/clFFT/bindings/clfft/"
keywords = ["fft", "opencl", "ffi"]
categories = ["External FFI bindings"]
description = "Bindings for clFFT, a FFT library for OpenCL."

[lib]
crate-type = ["rlib"]

[dependencies]
cl-sys = "^0.3.0"
ocl-core = "^0.5.1"
ocl = "^0.14.1"
lazy_static = "^0.2.0"

[features]
build_all = ["cmake"]

[build-dependencies]
cmake = { version = "^0.1.0", optional = true }

[dev-dependencies]
rustfft = "^1.0.0"
num = "^0.1.34"