[package]
name = "clfft"
version = "0.3.1"
authors = ["Christian Liebhardt"]
build = "build.rs"
license = "Apache-2.0"
homepage = "https://github.com/liebharc/clfft"
repository = "https://github.com/liebharc/clfft"
documentation = "https://liebharc.github.io/clFFT/bindings/clfft/"
keywords = ["fft", "opencl", "ffi"]
categories = ["api-bindings"]
description = "Bindings for clFFT, a FFT library for OpenCL."

[lib]
crate-type = ["rlib"]

[dependencies]
cl-sys = "^0.4.0"
ocl-core = "^0.9.0"
ocl = "^0.18.0"
lazy_static = "^0.2.0"

[features]
build_all = ["cmake"]

[build-dependencies]
cmake = { version = "^0.1.0", optional = true }

[dev-dependencies]
rustfft = "^1.0.0"
num = "^0.1"
